--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
-<html>
-<head>
-  <style>
-     body{
-         text-align: center;
-         background-image: linear-gradient(rgb(13, 175, 177), rgb(222, 222, 222));
-         min-width: 100%;
-         min-height: 100%;
-      }
-  </style>
 </head>
 
 <body>
-<h1>My Website</h1>
+<h1>Ducks!<h1>
+<h3>A duck's feathers are so waterproof that even when the duck dives underwater, the downy underlayer of feathers right next to the skin will stay completely dry. Ducks are omnivorous and will eat grass, aquatic plants, insects, seeds, fruit, fish, crustaceans and other types of food. Lets explore interresting facts about ducks<h3>
+
+<img scr="https://www.mypetchicken.com/cdn/shop/products/white-crested-duck5-mpc.jpg?v=1671498597&width=713">
+<h3>What are 5 interesting facts about duck?
+Take a minute to learn a few new facts about everyone's favorite pond-dweller.
+Duck quacks do echo! 
+Speaking of quacks: most male ducks don't!
+A group of ducks is called a paddling, a plump or even (if they're on the water) a raft! 
+Ducks can walk (and leap) just a few hours after hatching!<h3>
+<button>
+Extra facts
+</button>
 
 
 
-</body>
-
-</html>
