--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 </head>
 
 <body>
+  text-align: center;
+         background-image: linear-gradient(rgb(13, 175, 177), rgb(222, 222, 222));
+         min-width: 100%;
+         min-height: 100%;
 <h1>Ducks!<h1>
 <h3>A duck's feathers are so waterproof that even when the duck dives underwater, the downy underlayer of feathers right next to the skin will stay completely dry. Ducks are omnivorous and will eat grass, aquatic plants, insects, seeds, fruit, fish, crustaceans and other types of food. Lets explore interresting facts about ducks<h3>
 
